--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <h1>test headline</h1>
 <p>saya belajar github</p>
-<div><h3>apa yang anda pikirkan</h3></div>
+<div>
+    <h3>apa yang anda pikirkan</h3>
+    <p>Lorem ipsum</p>
+</div>
